syntax = "proto3";

package persona_chain.vc.v1;

import "amino/amino.proto";
import "gogoproto/gogo.proto";

option go_package = "github.com/persona-chain/persona-chain/x/vc/types";

// Params defines the parameters for the module.
message Params {
  option (amino.name) = "persona-chain/x/vc/Params";
}

message VcRecord {
  string id = 1;
  string issuer_did = 2;
  string subject_did = 3;
  string credential_schema = 4;
  string credential_data = 5;
  string proof = 6;
  bool revoked = 7;
  int64 issued_at = 8;
  int64 expires_at = 9;
  int64 revoked_at = 10;
}

message GenesisState {
  // params defines all the parameters of the module.
  Params params = 1 [(gogoproto.nullable) = false, (amino.dont_omitempty) = true];
  repeated VcRecord vcRecordList = 2 [(gogoproto.nullable) = false];
}